# kineticstreamer

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml  go-test.yml
app/: build.gradle.kts
app/src/androidTest/java/com/kevmo314/kineticstreamer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/kevmo314/kineticstreamer/: IAudioLevelCallback.aidl  IStreamingService.aidl  VideoSourceDevice.aidl
app/src/main/go/: bindump.go  build.ps1  build.sh  build_native.ps1  build_native.sh  build_third_party.ps1  build_third_party.sh  disk.go  encoder.h264  go.mod  go.sum  hls.go  kinetic.go  main.go  output.h264  output.h264.hex  output.h264.hex.2  rist.go  rist_listener_host.go  rist_test.go  rtmp_source.go  rtmp_source_test.go  rtsp_server.go  scream_bwe.go  scream_cc.go  srt.go  srt_listener_host.go  srt_test.go  uvc.go  whep.go  whip.go
app/src/main/go/cmd/jni/: exports.go  exports_rtmp.go  init.go  jni_wrapper.c  main.go
app/src/main/go/include/scream/: RtpQueueC.h  ScreamRxC.h  ScreamTxC.h
app/src/main/go/pkg/androidnet/: codecs.go  iface.go  net.go
app/src/main/java/com/kevmo314/kineticstreamer/: AddOutputScreen.kt  AudioSource.kt  AudioVisualizerView.kt  CameraPreview.kt  CameraSelectorDialog.kt  CameraSource.kt  DataStoreProvider.kt  DeviceSelectorDialog.kt  MainActivity.kt  MainScreen.kt  PermissionRequestActivity.kt  Settings.kt  SettingsScreen.kt  SingleThreadHandlerExecutor.java  StreamingConfiguration.kt  StreamingService.kt  SurfaceTextureRenderer.kt  VideoSource.kt  VideoSourceDevice.kt  WebViewOverlay.kt  WebViewSurfaceCapture.kt
app/src/main/java/com/kevmo314/kineticstreamer/kinetic/: FormatDescriptor.kt  Kinetic.kt  RISTSink.kt  RTMPServer.kt  RTMPSource.kt  SRTSink.kt  UACSource.kt  UACStream.kt  UVCSource.kt  UVCStream.kt  WHIPSink.kt
app/src/main/java/com/kevmo314/kineticstreamer/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  FindLibUSB.cmake  kinetic.c
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/kevmo314/kineticstreamer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
